# FloorPlanGenie

./: .replit  README.md  advanced_cad_processor.py  app.py  config  index.html  intelligent_placement_engine.py  interactive_canvas.py  interactive_visual_pro  models.py  modern_ui_controller.py  pixel_perfect_renderer.py  plan_processor.py  production_app.py  pyproject.toml  replit.md  script.js  space_optimizer.py  style.css  visual_generator.py
attached_assets/: Pasted--Implement-a-fully-featured-production-grade-floor-plan-analysis-and-rendering-engine-with-the-foll-1756312146603_1756312146606.txt  Pasted-want-a-production-grade-architectural-engine-not-just-a-basic-tool-but-a-professional-system-that-1756317951444_1756317951444.txt
static/: interactive-canvas.js  professional-ui.css  professional-ui.js  script.js  style.css
templates/: index.html  professional.html
uploads/: 6o3yyjj7.dxf
