[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ezdxf>=1.4.2",
    "flask>=3.1.2",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pypdf2>=3.0.1",
    "scipy>=1.16.1",
    "werkzeug>=3.1.3",
]
