[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cairosvg>=2.8.2",
    "ezdxf>=1.4.2",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "lxml>=6.0.1",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pypdf2>=3.0.1",
    "reportlab>=4.4.3",
    "rtree>=1.4.1",
    "scipy>=1.16.1",
    "shapely>=2.1.1",
    "svglib>=1.5.1",
    "werkzeug>=3.1.3",
    "psycopg2-binary>=2.9.10",
    "email-validator>=2.3.0",
]
